Fix contact page overflow

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -649,6 +649,9 @@ footer ul li:before{
 /*
 * CONTACT PAGE
 */
+.contact-section {
+	overflow: hidden;
+}
 
 .contact-section > div {
 	max-width: 1140px;
